@@ -1,6 +1,6 @@
 // TortoiseSVN - a Windows shell extension for easy version control
 
-// Copyright (C) 2003-2009 - TortoiseSVN
+// Copyright (C) 2003-2010 - TortoiseSVN
 
 // This program is free software; you can redistribute it and/or
 // modify it under the terms of the GNU General Public License
@@ -87,6 +87,12 @@ public:
 	 * Reads the string \text from the file \path in utf8 encoding.
 	 */
 	static bool ReadStringFromTextFile(const CString& path, CString& text);
+
+	/**
+	 * Find and return the number n of starting characters equal between 
+	 * \ref lhs and \ref rhs. (max n: lhs.Left(n) == rhs.Left(n))
+	 */
+	static int GetMatchingLength (const CString& lhs, const CString& rhs);
 #endif
 
 	/**
@@ -96,4 +102,3 @@ public:
 	static bool WriteStringToTextFile(const std::wstring& path, const std::wstring& text, bool bUTF8 = true);
 
 };
-
